--- a/Technology/index.html
+++ b/Technology/index.html
@@ -4,21 +4,20 @@
     <script src="p5.js"></script>
     <script src="p5.dom.min.js"></script>
     <script src="sketch.js"></script>
-    <style>
-        .button {
-        background-color: #4CAF50; /* Green */
-        border: none;
-        color: white;
-        padding: 15px 32px;
-        text-align: center;
-        text-decoration: none;
-        display: inline-block;
-        font-size: 16px;
-        }
+    <style type="text/css">
+    #button {
+      background-color: #704B9E;
+      border-radius: 4px;
+      color: #ffffff;
+      font-family: 'Helvetica';
+      font-size: 16px;
+      text-decoration: none;
+      border: none;
+    }
     </style>
   </head>    
    
   <body>
-      <p><button id = 'button'> click to progress</button></p> 
+      <p><button id = 'button'>Next</button></p> 
   </body>
 </html>
