Added forwards and backwards movement through slides

--- a/Technology/index.html
+++ b/Technology/index.html
@@ -5,7 +5,8 @@
     <script src="p5.dom.min.js"></script>
     <script src="sketch.js"></script>
     <style type="text/css">
-    #button {
+    #button2 , #button {
+      display:inline-block;
       background-color: #704B9E;
       border-radius: 4px;
       color: #ffffff;
@@ -14,10 +15,33 @@
       text-decoration: none;
       border: none;
     }
+/*     #button {
+      background-color: #704B9E;
+      border-radius: 4px;
+      color: #ffffff;
+      font-family: 'Helvetica';
+      font-size: 16px;
+      text-decoration: none;
+      border: none;
+      display:inline-block;
+    }
+    #button2 {
+      background-color: #704B9E;
+      border-radius: 4px;
+      color: #ffffff;
+      font-family: 'Helvetica';
+      font-size: 16px;
+      text-decoration: none;
+      border: none;
+      display:inline-block;
+    } */
+    
     </style>
   </head>    
    
   <body>
-      <p><button id = 'button'>Next</button></p> 
+      <button id = 'button2'>Back</button> 
+      <button id = 'button'>Next</button>
+      <p></p>
   </body>
 </html>
